# ResearchCode

./: .gitignore  README.md
CV_Checkerboard/: CMakeLists.txt  main.cpp
CV_Checkerboard/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
FreenectViewer/: CMakeLists.txt  main.cpp
FreenectViewer/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
aligning_depth_rgb/: align_depth_rgb.asv  align_depth_rgb.m  convert_rgbdemo_captures_to_jpegs.asv  convert_rgbdemo_captures_to_jpegs.m  transformed_rgb.mat
eyetrack/kinect_scripts/: get_depth_data.m  get_rgb_data.m  init_device.m  stop_device.m  update_device_data.m
eyetrack_papers/: face_tracker
face_track_annotate/: cameraCapture2.py  main_runner.txt.txt  test_video.avi
laser_cutting_misc/DWGS/: Drawing1.dwg  Holder.DWG  Kingfisher_beak.DWG  Kingfisher_black_2.DWG  Kingfisher_blue.DWG  asus_mount.DWG  drongo.DWG  egret.DWG  egret_legs.DWG  oriole _yellow.DWG  oriole.DWG  vasha.dwg  vasha2.dwg  vasha3.dwg
laser_cutting_misc/Research_laser_cutting_kinect_mount/: Assem1.SLDASM  asus_mount.SLDPRT  asus_mount_assembly.SLDASM  asus_mount_backup.SLDPRT  asus_mount_v3.SLDPRT  asus_mount_v4.SLDPRT  (+8 more)
pythonTobiiApp/: .name  EyeTrackerMain.py  EyeTrackerTracker.cpp  EyeTrackerTracker.h  GazeDataSubscriber.cpp  GazeDataSubscriber.h  GazeTracker.py  MainloopThread.cpp  MainloopThread.h
(+15 files in other folders)
